--- a/.envrc
+++ b/.envrc
@@ -1,7 +1,11 @@
-# Automatically sets up your devbox environment whenever you cd into this
-# directory via our direnv integration:
+# # Automatically sets up your devbox environment whenever you cd into this
+# # directory via our direnv integration:
 
-eval "$(devbox generate direnv --print-envrc)"
+# eval "$(devbox generate direnv --print-envrc)"
 
-# check out https://www.jetpack.io/devbox/docs/ide_configuration/direnv/
-# for more details
+# # check out https://www.jetpack.io/devbox/docs/ide_configuration/direnv/
+# # for more details
+
+load_devenv() {
+	./devenv.sh
+}
