Changed architecture to RISC-V

--- a/distrobox.ini
+++ b/distrobox.ini
@@ -1,4 +1,4 @@
 [riscv-kernel]
 image=quay.io/toolbx/ubuntu-toolbox:latest
-additional_packages="build-essential flex libncurses5-dev bc libssl-dev libelf-dev bison musl-tools musl-dev git qemu-system-x86"
+additional_packages="build-essential flex libncurses5-dev bc libssl-dev libelf-dev bison musl-tools musl-dev git qemu-system-misc gcc-riscv64-linux-gnu"
 # additional_packages="fish"
